--- a/Manigest.Core.ClienteFTP/MVP/Vistas/VistaConfServidorFTP.resx
+++ b/Manigest.Core.ClienteFTP/MVP/Vistas/VistaConfServidorFTP.resx
@@ -120,4 +120,40 @@
   <metadata name="formatoBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="fieldPassword.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAE2SURBVDhPvZOxSgNBEIZTKuoD2Cio76Bia6FlCl/Lyk5sFC18BFPYSJqdDe7ObdzZMyQabSwE
+        29jIn0uCt3DmDs588MPwzz/D3nLbaCwa59xqavQeZIxZifuVSG1nX5jehGk00TA42o1zpRi228vC9CpM
+        5zil9w9rgfWFMA36/fulOD8Xn6gDYfrG4qmHT4aHk+fTJfCWToTpI/bhoRf7hQSrtoR188mqU0noC8O/
+        BW/cY91ENp7PIVYd4/I90wvuShL9Lky9nDJvMMmMvNNH8Z4ZwvoSiv0ihNXVn/mQ0K1YdRb7RSCLmdif
+        8a8Lu11af3Z6J6s7mz1HG6jhoYe60kKxdCNMj+OadUuY7rKajE/oOstUWFj7Ccuw+IW1/4fTlxKYPsto
+        7ksBKdN2sOqwjJCN52vnB32Qk1ISrJfhAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldNombreUsuario.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAGVSURBVDhPvZQ/SxxRFMXXNkpIF21NYQK2UTuVSCQfIBBSBGxCtBfsUvgVRLTSUpIiSRkMKVIt
+        +86LzLtv1nff4B9S2FkoaOEujNxhXbJXdndSZH9w4XLOuW8Y7pupVAZNllUfxhTTUtJr/59gjxUmXDPh
+        RioQrgJhWedKER3eymHR2fdnwAOpQPhQPMCbNzrfFyb8iWRX7+kOa0w41XpP6nWMMSEPiZnQHjs8Fe+Y
+        qo+115U0TUeY0OTUTGkvS+wMExpJkgxrryfs8St6fMrzfOhOkz46fGbCz850CSLZZ0y4ZLL7sqBiSd78
+        YMKFvLbOlyIjPInOfmPCeVEeX6Mz4zo3WNjXngeH12VKsnq+g+jsUrFdwlHJarI37/Q5bZjMXiC7pfVu
+        sDfbMqP1NpGwyYQvWu9GsTBnNrTeJiO8lJ9AdGZBe5pDbxflgnPy+4X2OggO60XQY0eG/v7E0rQ2ys68
+        YofdIkP2Y+d0F4LHvFzo1oLy1i9MSvpGIHzPXG1Wz/Xl5ODgUT0xk4dk5qSkF03n/iu37FBpYZc9YcYA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="fieldServidor.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAFISURBVDhPtZRLSsRAEIYH9AQ+DiCCCi5cuFcEwQMMXsELeBFRT5FLxNkIma4Eu6tDUh3c6EJB
+        ccC9jFTIhKQmzqNxfvghVP356AfVvd6qlaaPG5mNL3IDl7PMmSyLNuX/LWVP0R4hvBPCByE8zzFnPsnA
+        geTUIqPuHUI4DoI12ZPiDKEaEMKt7NVyFgKGEsEWIeiOVU2sywwvwEIgObUmwCIdHhLCmBCunYmvmuYa
+        98rMssAiSbZlhmveQIcwcghfwiN/oFZ9Z9R5y1r1vYH/tuVcq/3qUv50mVkUyN9kk6PMxMdd5l6ZWQbY
+        VBiG62xZ9wLyvBLCKyG88Jw3e17A6jx/2DzrzZ4XkFWY4akzyYmszwWSje9yjB8WeRz4TPlxcAg3sler
+        QNitnq/vjglpmTOE8JbraEdyWuJLyC2cTU2IMGfkJa1Ev1HHSJLs7Y/bAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
