Concluido el módulo de gestión de contactos

--- a/Manigest.Desktop/MVP/Vistas/ContenedorModulos/VistaContenedorModulos.resx
+++ b/Manigest.Desktop/MVP/Vistas/ContenedorModulos/VistaContenedorModulos.resx
@@ -123,40 +123,53 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAGLSURBVEhL5ZS/SgNBEMaDoJWF1koIO39uNqegpDeFlb6FIPoAAe1EUNBXsfYRVLAULERbLay0
-        0EIFo8zprXfDLTmSQsQfDGy+75uZsLlco/FvQMRZQTjVYuYZ64+EIHaF4F4InoTcc3ZG7NrcMIwljIdC
-        0BeCS+8caelZNfU0Y5tqsdBqTQnhsRB8eIajNE0nc0/PqqmnGc2WuwfgAeaE4EYI3oRhw/o56mUZhOs2
-        Ymr9Sjy71YTgURgemGHF+hbNa1Z7Bubb7Jazb0R4wczO+jEQEbRHez3RkvUDQu5cCK+K910X7dGr8gQn
-        1gsIwaswHli9Lt9P3IvVA9lTwbhr9bpor86weuDXFsw3m9PC0NMryK6BoaeazQ29QBjOvv5UP1X1Yw6/
-        gKDvCfbyz55gXwjey6nRFpT02KCYHrCDYnpsUEwP2EExPTYopgfsoILer7UA3U6VHhCC22xJRXnG9Tyn
-        Z+sX6q48tYC+pj3Blke3XSwh2EzTdCLPdTqd8YTcms1ptREXy1P/Op/UtbGf4omb7QAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAYtJREFUSEvl
+        lL9KA0EQxoOglYXWSgg7f242p6CkN4WVvoUg+gAB7URQ0Fex9hFUsBQsRFstrLTQQgWjzOmtd8MtOZJC
+        xB8MbL7vm5mwuVyj8W9AxFlBONVi5hnrj4QgdoXgXgiehNxzdkbs2twwjCWMh0LQF4JL7xxp6Vk19TRj
+        m2qx0GpNCeGxEHx4hqM0TSdzT8+qqacZzZa7B+AB5oTgRgjehGHD+jnqZRmE6zZiav1KPLvVhOBRGB6Y
+        YcX6Fs1rVnsG5tvslrNvRHjBzM76MRARtEd7PdGS9QNC7lwIr4r3XRft0avyBCfWCwjBqzAeWL0u30/c
+        i9UD2VPBuGv1umivzrB64NcWzDeb08LQ0yvIroGhp5rNDb1AGM6+/lQ/VfVjDr+AoO8J9vLPnmBfCN7L
+        qdEWlPTYoJgesINiemxQTA/YQTE9NiimB+yggt6vtQDdTpUeEILbbElFecb1PKdn6xfqrjy1gL6mPcGW
+        R7ddLCHYTNN0Is91Op3xhNyazWm1ERfLU/86n9S1sZ/iiZvtAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="resource.Image1" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAHzSURBVEhL7VQ9ixRBEB25QEVNjRad61evq9qF/QMXCGZ+JJqokYGBf8PkQBD8wkAQjASNFFxQ
-        UBDEixT9A4qIgcJhIC6inHcqNTe7Lu3t7KxceA+aeVPdVW/qUT1FsYVZYMQbFdzvihzI9zYFRvyu16pR
-        bnVD2FcUxZyJHEzEFRO8T8TzOj476uJXTbBoxMCI70Ys1/GvRtwz4osRn43hWJY+p4pDFnEmi/9FVSjK
-        eecA9mqUC0bcSAxHy7Lc4XERgRGvjPhlxEVVLBhxzSI+1R+yltcdwQ9oxFJRFNvyvXGIyHaTcH3M0m9G
-        3DGGB/6enx9hmKCCm95yvp8jxXAkRZzq9Xq7/N27nyqQIh56m0bpdzqdnfmZJrQS8EMa5WnlccSjJHLW
-        YrhklMdGfDTiyfCLc9TDMUWA0vdpiBGLKmF1OEHK8E4Fd434aQzPut3u7vFcVd2TBB+aBaTqYJDm5/f7
-        UmJZgQUry9KnpIpHnHQRvw9e1PP8aYIllbDWLDC0iHLZbfHYRjxGHDbih49rCoFGvPY7o5Tb0wVqi6pL
-        Q5ybxI08bcRKLbSy3pn0mwUyi0a2TODGcKLiEcfX4zLwGnndEdpaNIm3G9OWFm3MN9mif3kbi3zcIl5q
-        DC/8ZzcL99zGDhLxtr5Y/728Rl53C434A6zMDMs0PmpKAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAfNJREFUSEvt
+        VD2LFEEQHblARU2NFp3rV6+r2oX9AxcIZn4kmqiRgYF/w+RAEPzCQBCMBI0UXFBQEMSLFP0DioiBwmEg
+        LqKcdyo1N7su7e3srFx4D5p5U91Vb+pRPUWxhVlgxBsV3O+KHMj3NgVG/K7XqlFudUPYVxTFnIkcTMQV
+        E7xPxPM6Pjvq4ldNsGjEwIjvRizX8a9G3DPiixGfjeFYlj6nikMWcSaL/0VVKMp55wD2apQLRtxIDEfL
+        stzhcRGBEa+M+GXERVUsGHHNIj7VH7KW1x3BD2jEUlEU2/K9cYjIdpNwfczSb0bcMYYH/p6fH2GYoIKb
+        3nK+nyPFcCRFnOr1erv83bufKpAiHnqbRul3Op2d+ZkmtBLwQxrlaeVxxKMkctZiuGSUx0Z8NOLJ8Itz
+        1MMxRYDS92mIEYsqYXU4QcrwTgV3jfhpDM+63e7u8VxV3ZMEH5oFpOpgkObn9/tSYlmBBSvL0qekikec
+        dBG/D17U8/xpgiWVsNYsMLSIctlt8dhGPEYcNuKHj2sKgUa89jujlNvTBWqLqktDnJvEjTxtxEottLLe
+        mfSbBTKLRrZM4MZwouIRx9fjMvAaed0R2lo0ibcb05YWbcw32aJ/eRuLfNwiXmoML/xnNwv33MYOEvG2
+        vlj/vbxGXncLjfgDrMwMyzQ+akoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="resource.Image2" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAFHSURBVEhL7VQ9SwQxEA0Wlv4FbzNvshO2txVB7ldoo72lWljYnSAWllbi7/APaHGgpVhqZyU2
-        foBK1s26OwoXc9jdg4HwZt68ZDcTY2b4C4TpWpg+pgtc6b4tmqJzD7uTE0Ebeui+LWoDh33NpyJoswwq
-        IojDqHQ4CBHWgdN12QYeWBem9863fi6BNV2XbZCKmcFEOFcsecal5lvkGFRVNS9M98J0F9Y630OOgcDu
-        xtvlmbZ1vodUAw9sCtsLYRp3rm6McciVsBtal2yQ9mb98ialGpREK20j0E2Y6nramW6/eSxrXbKBMWZO
-        mN6aZoeRFNijhnsNNX3Jl8GjMB1rXkOAYfcEvigWRQaD7gm8s6taZwR0JkwvwnQSH7ZeMO3Vdbn/AMCC
-        MJ0K09NPQdwxhtm3KAfdOSiZtnR+ajST/BBi4iT/Bz4B11XhLUVhCqAAAAAASUVORK5CYII=
+        YQUAAAHwSURBVEhLvZTLahRREIajiBdQwWsEh9h9/qo6dXISEETRhTALca+P4MqVC4MoqEHBhQt9CZdZ
+        uXApCirGZ4hC8gRZ6E7wQnV6mu4e53TPiH5Q0FN/zV9d3XV6bu5/A+CkJ3fDwq77ar1Qoksq2FbGryIE
+        24HoYpfWG2X3SRkbESALZXxWxscurTfK+KaEZ9Vvcs+V8bVL640SPthdhjw/Y2F36RnvurTeiOQX2s9Z
+        xJ3v0qYitSkprRMluhoYT7zQ01Go0OPhcLjnT5qF5YK4K22vMcygGr0WXvBiklaPziZKbtUKsyzbP402
+        GAwOFE3Irba1Bir0yArbeSOlGTEOjrZzY6RMUpqhgpViu4Rut7WKlElKW8rzeSVsle9ic+JmpUzaWoxx
+        rzLWPeN141yUZ6PIM9atrmaCFSuIWXaqSpZ4xi3TROR0UcvuesN0QgTBtcqk+FLubMO9unmhAedM84z7
+        ZWqXMt6OjDzjzvLCwpFA7m7VQPDG6ppGjFfK+G5NiOiETWOmAVgKgpem2aErasvVtYgxHrSc9/5QremD
+        hrlBRIdLo/qoPwPjoZkEwZqIuGKCnQ9fNQER7atPEBjvxyYYsSj5ZfuTZ3czMp9tybtnegfTMNMWzYqI
+        HA+ML2WDDVU91q75a8oV/5E8yf+S3yVeDit4Z3/8AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="resource.Image3" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUdJREFUSEvt
+        VD1LBDEQDRaW/gVvM2+yE7a3FUHuV2ijvaVaWNidIBaWVuLv8A9ocaClWGpnJTZ+gErWzbo7Chdz2N2D
+        gfBm3rxkNxNjZvgLhOlamD6mC1zpvi2aonMPu5MTQRt66L4tagOHfc2nImizDCoiiMOodDgIEdaB03XZ
+        Bh5YF6b3zrd+LoE1XZdtkIqZwUQ4Vyx5xqXmW+QYVFU1L0z3wnQX1jrfQ46BwO7G2+WZtnW+h1QDD2wK
+        2wthGneuboxxyJWwG1qXbJD2Zv3yJqUalEQrbSPQTZjqetqZbr95LGtdsoExZk6Y3ppmh5EU2KOGew01
+        fcmXwaMwHWteQ4Bh9wS+KBZFBoPuCbyzq1pnBHQmTC/CdBIftl4w7dV1uf8AwIIwnQrT009B3DGG2bco
+        B905KJm2dH5qNJP8EGLiJP8HPgHXVeEtRWEKoAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
